--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,15 @@ dependencies:
 
   # Navigation bar lib
   bottom_navy_bar: ^5.2.0
+  spring_button:
+
+  barcode_scan: ^1.0.0
+
+  http: ^0.12.0+1
+  share: ^0.6.0+1
+  fluttertoast: ^3.0.4
+  avatar_glow: ^0.1.0
+  shared_preferences: ^0.5.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
