--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   fluttertoast: ^3.0.4
   avatar_glow: ^0.1.0
   shared_preferences: ^0.5.2
+  image_picker:
+  random_string: ^1.1.0
+  cached_network_image: ^1.1.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
