--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   image_picker:
   random_string: ^1.1.0
   cached_network_image: ^1.1.3
+  url_launcher: ^5.2.7
 
 
   # The following adds the Cupertino Icons font to your application.
